clippy fixes

--- a/src/style.css
+++ b/src/style.css
@@ -493,7 +493,7 @@ body {
 }
 
 .carbon-item-next .carbon-value {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .carbon-item-change {
